[gd_scene load_steps=3 format=2]

[ext_resource path="res://setup.gd" type="Script" id=1]
[ext_resource path="res://gfx/preview.png" type="Texture" id=2]

[node name="setup" type="PanelContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor" ]

[node name="main" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1193.0
margin_bottom = 1067.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Container" type="Container" parent="main" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1176.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="main/Container" index="0"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -582.0
margin_top = -308.0
margin_right = -288.0
margin_bottom = -294.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "WELCOME TO THE ARENA"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="no_of_players_label" type="Label" parent="main/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 278.0
margin_top = 102.0
margin_right = 400.0
margin_bottom = 116.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Number of players:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Visibility", "custom_fonts" ]

[node name="frag_limit_label" type="Label" parent="main/Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 278.0
margin_top = 198.0
margin_right = 400.0
margin_bottom = 212.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "FRAG Limit:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Visibility", "custom_fonts" ]

[node name="no_of_players_number" type="Label" parent="main/Container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 662.0
margin_top = 102.0
margin_right = 682.0
margin_bottom = 116.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Visibility", "custom_fonts" ]

[node name="frag_limit_number" type="Label" parent="main/Container" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 662.0
margin_top = 198.0
margin_right = 682.0
margin_bottom = 212.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Visibility", "custom_fonts" ]

[node name="increment_players" type="Button" parent="main/Container" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 848.0
margin_top = 90.0
margin_right = 868.0
margin_bottom = 110.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="decrement_players" type="Button" parent="main/Container" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 770.0
margin_top = 90.0
margin_right = 790.0
margin_bottom = 110.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="increment_frags" type="Button" parent="main/Container" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 848.0
margin_top = 180.0
margin_right = 868.0
margin_bottom = 200.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="decrement_frags" type="Button" parent="main/Container" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 770.0
margin_top = 180.0
margin_right = 790.0
margin_bottom = 200.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="MarginContainer" type="MarginContainer" parent="main" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -414.0
margin_top = -137.0
margin_right = 414.0
margin_bottom = -17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="main/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 828.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "FIGHT!"
flat = false
align = 1

[node name="Container2" type="Container" parent="main" index="2"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -606.0
margin_top = -318.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="main/Container2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_top = 69.0
margin_right = 422.0
margin_bottom = 489.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = "Controls:

Xbox 360/One Controller:

Left Stick
A
X
R
L (Hold)

KEYBOARD CONTROLLERS (UP TO 2 PLAYERS)

Player 1

Arrow Left/Right
Arrow Up
Arrow Down
Ctrl
Shift (Hold)

Player 2

A/D
W
S
G
H (Hold)
"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Controls:

Xbox 360/One Controller:

Left Stick
A
X
R
L (Hold)

KEYBOARD CONTROLLERS (UP TO 2 PLAYERS)

Player 1

Arrow Left/Right
Arrow Up
Arrow Down
Ctrl
Shift (Hold)

Player 2

A/D
W
S
G
H (Hold)
"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect" ]

[node name="RichTextLabel2" type="RichTextLabel" parent="main/Container2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 306.0
margin_top = 156.0
margin_right = 614.0
margin_bottom = 576.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = "-	Move
-	Jump
-	Switch/Pick up weapon
-	Shoot
-	Move without turning





-	Move
-	Jump
-	Switch/Pick up weapon
-	Shoot
-	Move without turning



-	Move
-	Jump
-	Switch/Pick up weapon
-	Shoot
-	Move without turning"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "-	Move
-	Jump
-	Switch/Pick up weapon
-	Shoot
-	Move without turning





-	Move
-	Jump
-	Switch/Pick up weapon
-	Shoot
-	Move without turning



-	Move
-	Jump
-	Switch/Pick up weapon
-	Shoot
-	Move without turning"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect" ]

[node name="Container3" type="Container" parent="main" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 294.0
margin_right = 666.0
margin_bottom = 684.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="select_level_label" type="Label" parent="main/Container3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 122.0
margin_top = 9.0
margin_right = 244.0
margin_bottom = 23.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Select Level"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Visibility", "custom_fonts" ]

[node name="level_name" type="Label" parent="main/Container3" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 122.0
margin_top = 66.0
margin_right = 244.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "level name"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Visibility", "custom_fonts" ]

[node name="TextureRect" type="TextureRect" parent="main/Container3" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 174.0
margin_top = 114.0
margin_right = 430.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="next_level" type="Button" parent="main/Container3" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 462.0
margin_top = 198.0
margin_right = 492.0
margin_bottom = 228.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ">"
flat = false
align = 1

[node name="prev_level" type="Button" parent="main/Container3" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 201.0
margin_right = 84.0
margin_bottom = 231.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<"
flat = false
align = 1

[node name="Container4" type="Container" parent="main" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 552.0
margin_right = 666.0
margin_bottom = 942.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="chb_last_man" type="CheckBox" parent="main/Container4" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 225.0
margin_right = 191.0
margin_bottom = 252.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Last Man Standing"
flat = false
align = 0
_sections_unfolded = [ "Rect" ]

[node name="chb_instagib" type="CheckBox" parent="main/Container4" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 129.0
margin_right = 127.0
margin_bottom = 156.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Instagib"
flat = false
align = 0
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="main/Container/increment_players" to="." method="_on_increment_players_pressed"]

[connection signal="pressed" from="main/Container/decrement_players" to="." method="_on_decrement_players_pressed"]

[connection signal="pressed" from="main/Container/increment_frags" to="." method="_on_increment_frags_pressed"]

[connection signal="pressed" from="main/Container/decrement_frags" to="." method="_on_decrement_frags_pressed"]

[connection signal="pressed" from="main/MarginContainer/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="main/Container3/next_level" to="." method="_on_next_level_pressed"]

[connection signal="pressed" from="main/Container3/prev_level" to="." method="_on_prev_level_pressed"]

[connection signal="pressed" from="main/Container4/chb_last_man" to="." method="_on_chb_last_man_pressed"]

[connection signal="pressed" from="main/Container4/chb_instagib" to="." method="_on_chb_instagib_pressed"]


